# mk

./: Cargo.toml  README.md
src/: main.rs  making.rs  mkfile.rs  test_input.mk
src/snapshots/: mk__mkfile__test__parse.snap
test/: .mkstate.json  mkfile
