[package]
name = "mk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.2.7", features=["derive"] }
insta = "1.29.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.8.1"
serde = { version="1.0.163", features=["derive"] }
serde_sexpr = "0.1.0"
simple_logger = "4.1.0"
